--- a/web/apartmentbuilding/templates/apartmentbuilding/caracteristicas_generales.html
+++ b/web/apartmentbuilding/templates/apartmentbuilding/caracteristicas_generales.html
@@ -1,6 +1,6 @@
 <div class="col-2">
 	<div class="form-group">
-		Pisos
-		[]
+		{{forms.apartment_building.floors.label_tag}}
+		{{forms.apartment_building.floors}}
 	</div>
 </div>
