--- a/web/main/templates/main/appraisals_active.html
+++ b/web/main/templates/main/appraisals_active.html
@@ -2,17 +2,17 @@
 
 <thead>
   <tr>
-    <th scope="col" style="width:1em">ID</th>
+    <th scope="col" style="width:2em">ID</th>
     <th scope="col" style="width:8em">Cliente</th>
     <th scope="col" style="width:6.5em">Código</th>
-    <th scope="col" style="width:1em;text-align:center;">T.</th>
+    <th scope="col" style="width:2em;text-align:center;">T.</th>
     <th scope="col" style="width:19em;">Dirección</th>
     <th scope="col" style="width:11em;">Tasador</th>
     <th scope="col" style="width:11em;">Visador</th>
     <th scope="col" style="width:1em;text-align:center;">E.</th>
     <th scope="col" style="width:5em;">Creada</th>
     <th scope="col" style="width:7em;">Entrega</th>
-    <th scope="col" style="width:4em;"></th>
+    <th scope="col" style="width:4em;text-align:right;"></th>
   </tr>
 </thead>
 <tbody>
