--- a/web/main/templates/main/appraisals_finished.html
+++ b/web/main/templates/main/appraisals_finished.html
@@ -2,10 +2,10 @@
 
 <thead>
   <tr>
-    <th scope="col" style="width:1em">ID</th>
+    <th scope="col" style="width:2em">ID</th>
     <th scope="col" style="width:8em">Cliente</th>
     <th scope="col" style="width:8em">Código</th>
-    <th scope="col" style="width:1em;text-align:center;">T.</th>
+    <th scope="col" style="width:2em;text-align:center;">T.</th>
     <th scope="col" style="width:19em">Dirección</th>
     <th scope="col" style="width:11em">Tasador</th>
     <!--<th scope="col">Fecha creación</th>-->
@@ -56,24 +56,9 @@
     <td style="text-align:right;">
       {% include 'main/btn_logbook.html' %}
       {% if perms.appraisal.assign_visador %}
-      <button type="button" id="{{appraisal.tasadorUser.id}}" 
-              value="{{appraisal.id}}"
-              class="btn btn-dark btn-sm btn-evaluate evaluateAppraisal"
-              data-toggle="modal"
-              data-target="#evaluateAppraisal" 
-              data-ontime="{{appraisal.appraisalevaluation.onTime}}"
-              data-completeness="{{appraisal.appraisalevaluation.completeness}}"
-              data-correctsurface = "{{appraisal.appraisalevaluation.correctSurface}}"
-              data-completenormative = "{{appraisal.appraisalevaluation.completeNormative}}"
-              data-homologatedreferences = "{{appraisal.appraisalevaluation.homologatedReferences}}"
-              data-commenttext="{{appraisal.appraisalevaluation.commentText}}"
-              data-generalquality="{{appraisal.appraisalevaluation.generalQuality}}"
-              data-commentfeedback="{{appraisal.appraisalevaluation.commentFeedback}}"
-              style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
-        assessment
-      </button>
+      {% include 'main/btn_evaluate.html' %}
+      {% endif %}
     </td>
-    {% endif %}
   </tr>
   {% endfor %}
 </tbody>
