--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -17,7 +17,7 @@
       </li>
       {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
-        <a class="nav-link" href="/create/">Ingresar tasación</a>
+        <a class="nav-link" href="/create/">Ingresar</a>
       </li>
       {% endif %}
       {% if perms.appraisal.add_appraisal %}
@@ -25,6 +25,9 @@
         <a class="nav-link" href="/evaluation/">Tasadores</a>
       </li>
       {% endif %}
+      <li class="nav-item">
+        <a class="nav-link" href="/accounting/">Contabilidad</a>
+      </li>
     </ul>
     {% endif %}
   </div>
