--- a/web/main/templates/main/btn_logbook.html
+++ b/web/main/templates/main/btn_logbook.html
@@ -4,6 +4,6 @@
     <i class="icon material-icons" style="font-size:15px;vertical-align: text-top;">assignment</i>
     <div class="ld ld-ring ld-spin" style="display:none;"></div>
     {% if hna %}
-      <span class="notification badge badge-light">NUEVA</span>
+      <span class="notification badge badge-light" style="top:-2px;">NUEVA</span>
     {% endif %}
   </button>
