--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -18,31 +18,31 @@
     <table class="table table-sm table-borderless" style="font-size:0.8em;">
       <thead>
         <tr>
-          <th scope="col" style="width:2em;">
+          <th scope="col" style="width:20px;">
             <input class="form-control form-control-sm" placeholder="ID" id="buscar_id"></input>
           </th>
-          <th scope="col" style="width:8em">
+          <th scope="col" style="width:100px">
             <input class="form-control form-control-sm" placeholder="Cliente" id="buscar_solicitante"></input>
           </th>
-          <th scope="col" style="width:6.5em">
+          <th scope="col" style="width:80px">
             <input class="form-control form-control-sm" placeholder="Código" id="buscar_solicitanteCodigo"></input>
           </th>
-          <th scope="col" style="width:2em;text-align:center;">
+          <th scope="col" style="width:20px;text-align:center;">
           </th>
-          <th scope="col" style="width:19em;">
+          <th scope="col" style="width:300px;">
             <input class="form-control form-control-sm" placeholder="Dirección" id="buscar_address"></input>
           </th>
-          <th scope="col" style="width:11em;">
+          <th scope="col" style="width:120px;">
             <input class="form-control form-control-sm" placeholder="Tasador" id="buscar_tasador"></input>
           </th>
-          <th scope="col" style="width:11em;">
+          <th scope="col" style="width:120px;">
             <input class="form-control form-control-sm" placeholder="Visador" id="buscar_visador"></input>
           </th>
-          <th scope="col" style="width:8em;">
+          <th scope="col" style="width:100px;">
           </th>
-          <th scope="col" style="width:8em;">
+          <th scope="col" style="width:100px;">
           </th>
-          <th scope="col" style="width:4em;"></th>
+          <th scope="col" style="width:60px;"></th>
         </tr>
       </thead>
     </table>
